	PR c++/79653 	* parser.c (cp_parser_std_attribute_spec): Don't build the attribute 	if the alignas expression is erroneous. 	* pt.c (tsubst_attribute): If tsubst_pack_expansion fails, return 	error_mark_node.

* g++.dg/cpp0x/alignas10.C: New test.
	* g++.dg/cpp0x/alignas9.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@245657 138bc75d-0d04-0410-961f-82ee72b054a4